name:              hamilcar
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable hamilcar
  main-is:         Main.hs
  hs-source-dirs:  src
  ghc-options:     -Wall -O2 -fno-warn-unused-do-bind
  build-depends:   base,
                   bytestring,
                   array
